2007-07-20  Akim Demaille  <demaille@gostai.com>

	Fix lazy_overwrite
	* dev/tools.py (warning): Simplify.
	(lazy_overwrite): Do not recreate the file if it is not
	needed!

2007-07-20  Akim Demaille  <demaille@gostai.com>

	Fix dependency on ast-nodes.mk
	* src/ast/Makefile.am: Depend on nodes-mk.stamp since the
	generator is ast-nodes-mk-gen.

2007-07-20  Akim Demaille  <demaille@gostai.com>

	Improve ast-fwd-gen
	* dev/ast_params.py (fwd_hh_epilogue): New.
	* dev/ast-fwd-gen: Use it.
	Modernize.

2007-07-20  Akim Demaille  <demaille@gostai.com>

	Let all the classes be accessible
	* src/object/primitives.cc (root_classes_initialize): Register
	the root classes in Object.
	* src/parser/bison/ugrammar.y (new id): Properly clone the base
	class, not the Context.

2007-07-17  Akim Demaille  <demaille@gostai.com>

	new Object
	* src/object/primitives.cc (object_class_print)
	(object_class_clone, object_class_init): New.
	(object_class_initialize): Bind them.
	* src/parser/bison/ugrammar.y (new "id"): Run clone and init.

2007-07-17  Akim Demaille  <demaille@gostai.com>

	Connetion -> Context to please JC
	* src/object/primitives.cc, src/object/primitives.hh,
	* src/parser/bison/ugrammar.y, src/runner/runner.hxx: Do it.

2007-07-17  Akim Demaille  <demaille@gostai.com>

	merge -r 1332:1336 https://svn.gostai.com/svn/kernel1/trunk

	2007-07-17  Akim Demaille  <demaille@gostai.com>
	Fix warning output
	* src/uconnection.cc (received): Process the warnings similarly
	to the errors.
	Add a few PINGs.
	(UConnection::processCommand::morphed): Reduce its scope.

2007-07-17  Akim Demaille  <demaille@gostai.com>

	"Return" results
	* src/parser/bison/ugrammar.y: Set up.commandTree.
	* src/uconnection.cc (execute): Send back the result for
	floats only at the moment.

2007-07-17  Akim Demaille  <demaille@gostai.com>

	AX_*
	* configure.ac: Catch them.

2007-07-17  Akim Demaille  <demaille@gostai.com>

	merge -r 1320:1332 https://svn.gostai.com/svn/kernel1/trunk
