@@ -38,14 +38,8 @@ collections = ["exps_type",
 clone_visitor_hh = file("clone-visitor.hh.tmp", "w")
 sys.stdout = clone_visitor_hh
 
-print """\
-//<<-
-// Generated, do not edit by hand.
-//->>
-/**
- ** \\file astclone/clone-visitor.hh
- ** \\brief Declaration of astclone::CloneVisitor.
- */
+print tools.banner("astclone/clone-visitor.hh",
+                   """Declaration of astclone::CloneVisitor.""") + """
 
 #ifndef ASTCLONE_CLONE_VISITOR_HH
 # define ASTCLONE_CLONE_VISITOR_HH
