@@ -1,5 +1,13 @@
 2007-07-20  Akim Demaille  <demaille@gostai.com>
 
+	Clean up
+	* dev/ast_params.py: Support symbols_type.
+	* dev/ast-clone-visitor-gen: Use tools.banner.
+	* dev/ast-default-visitor-gen: Fix ctor layout.
+	* dev/ast-nodes-gen: Use tools.lazy_install.
+
+2007-07-20  Akim Demaille  <demaille@gostai.com>
+
 	Fix lazy_overwrite
 	* dev/tools.py (warning): Simplify.
 	(lazy_overwrite): Do not recreate the file if it is not
